# OpenMiChroM-Ana

./: .gitignore  Analysis.py  AnalysisTools.py  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt  setup.py  test.ipynb  util.py
AnalysisTools/: Ana.py  CompHelperCPU.py  CompHelperGPU.py  Comp_Helper_CPU.py  Comp_Helper_GPU.py  PlotHelper.py  Plot_Helper.py  __init__.py  cndbToolsMini.py  compute_helpers.py  plot_helpers.py
test/: convert.sh  reduction_techniques.ipynb  test.ipynb  tests.ipynb
