[tool.poetry]
name = "OpenMiChroM-Ana"
version = "0.1.0"
packages = [
    { include = "AnalysisTools" }
    ]
description = "A package for analyzing chromosome structure data"
authors = ["Diego Coronado <diegoa2992@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.0"
scipy = "^1.14.0"
sklearn = "^1.5.0"
joblib = "^1.4.0"
numba = "^0.57.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
umap-learn = "^0.5.4"
kneed = "^0.8.1"
pandas = "^2.0.0"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
cupy = "^12.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
